fix: Correct entity method calls in EvaluationAnalyticsService and AiController
- Changed getTeamName() to getName() (Team entity uses 'name' field)
- Changed getScore() to getNumericScore() (EvaluationScore uses 'numericScore' field)
- Removed unused QuestionnaireRepository and TeamRepository fields
- Updated collection syntax to modern toList()
- All compiler errors resolved